# whisper-experimental

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
client/: client.py  cmdline.py  main.py  protocol.py
client-go/: go.mod  go.sum
client-go/cmd/client/: client.go
client-go/codegen/protos/protocol/: protocol.pb.go
client-go/internal/client/: client.go
client-go/internal/parsers/: load.go  parsers.go
client-go/internal/protocol/: protocol.go
client-rs/: Cargo.toml  README.md
client-rs/examples/: threaded_module.rs
client-rs/src/: client.rs  error.rs  lib.rs  main.rs  module_descriptor.rs  module_manager.rs
client-rs/wit/: module.wit
core/: Cargo.toml
core/src/: main.rs  protocol.rs  protocolext.rs  remote.rs  server.rs
core/src/codegen/protos/: protocol.rs
manifest-gen/: Cargo.toml
manifest-gen/examples/: module.manifest.yaml
manifest-gen/examples/protos/: greeter.proto
manifest-gen/src/: main.rs
memory-module/: Cargo.toml
memory-module/src/: allocator.rs  error.rs  lib.rs  memory_module.rs  pe_file.rs
module-file-wasm/: Cargo.toml
module-file-wasm/src/: lib.rs
module-survey/: Cargo.toml
module-survey-dll/: Cargo.toml
module-survey-dll/src/: lib.rs
module-survey-wasm/: Cargo.toml  build.rs
module-survey-wasm/src/: lib.rs
module-survey-wasm/wit/: module.wit
module-survey/src/: lib.rs
modules/file/dll/: Cargo.toml
modules/file/dll/src/: lib.rs
modules/file/dll/src/codegen/: whisper.module.file.rs  whisper.module.file.upload.rs
modules/file/protocol/: file.proto  upload.proto
modules/file/wasm/: Cargo.toml  build.rs
modules/file/wasm/src/: lib.rs
modules/file/wasm/src/upload/: mod.rs  state.rs
poor-mans-rpc/: Cargo.toml
poor-mans-rpc-bindings/: Cargo.toml
poor-mans-rpc-bindings/src/: lib.rs
poor-mans-rpc-dll/: Cargo.toml  build.rs
poor-mans-rpc-dll/src/: lib.rs
poor-mans-rpc-test/: Cargo.toml  notes.md
poor-mans-rpc-test/examples/: memory_module.rs  message_pack.rs
poor-mans-rpc-test/src/: main.rs
poor-mans-rpc-test/testing/: msgpack_test.py
poor-mans-rpc/src/: bindings.rs  lib.rs  manager.rs
proto/: common.proto  module.proto  protocol.proto  request.proto  response.proto
test-binrw-enums/: Cargo.toml
test-binrw-enums/src/: main.rs
whisper-lib/: Cargo.toml
whisper-lib/src/: envelope.rs  lib.rs  protocol.rs
whisper-lib/src/codegen/: whisper.protocol.rs
wit/: module.wit
