[workspace]
resolver = "2"
members = [
    "client-rs",
    "core",
    "manifest-gen",
    "memory-module",
    "module-survey-dll",
    "module-survey-wasm",
    "poor-mans-rpc",
    "poor-mans-rpc-bindings",
    "poor-mans-rpc-dll",
    "poor-mans-rpc-test",
    "test-binrw-enums"
    ]

[profile.dev]
lto = "off"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
