[package]
name = "client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
flume = { version = "0.11.1", features = ["select"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
prost = "0.13.5"
rand = "0.9.1"
rustyline = "15.0.0"
shlex = "1.3.0"
thiserror = "2.0.12"
wasmtime = { version = "33.0.0", features = ["component-model", "cranelift", "std", "runtime", "threads"] }
wasmtime-wasi = "33.0.0"
whisper-lib = { path = "../whisper-lib" }