[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.13.3"
pmr = { path = "../poor-mans-rpc" }
memory-module = { path = "../memory-module" }
rmp-serde = "1.3.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
prost = "0.13.5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
