[package]
name = "memory-module"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
thiserror = "2.0.12"
windows = { version = "0.60.0", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Diagnostics_Debug",
] }
