[package]
name = "module-survey-dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pmr = { path = "../poor-mans-rpc" }
rmp-serde = "1.3.0"
windows = { version = "0.61.1", features = ["Win32_System_WindowsProgramming", "Win32_System_Com"] }

[profile.dev]
lto = "off"

[profile.release]
lto = "off"
